Fix UI height on mobile browsers

--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@ body {
   max-width: 1000px;
   margin: 0 auto;
   height: 100vh;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   background: var(--bg-gradient);
